# DSLCompiler

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/rules/: llvm-version-compatibility.md  preferred-mlir-api.md  worktree-isolation.md
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml
docs/design/: m1-scalar-pipeline.md  m2-explicit-vector.md  m3-fused-memory.md  m4-parallel-execution.md  m5-specialization-tuning.md  m6-multi-kernel.md
docs/superpowers/plans/: 2026-07-14-llk-compiler-implementation.md  m1-scalar-pipeline.md  m2-explicit-vector.md  m3-fused-memory.md  m4-parallel-execution.md  m5-specialization-tuning.md  m6-multi-kernel.md
include/LLK/Conversion/: LLKToLinalg.h
include/LLK/Dialect/: LLKDialect.h  LLKDialect.td  LLKEnums.h  LLKOps.td
include/LLK/Runtime/: JitCache.h  KernelKey.h  PackedWeights.h  ThreadPool.h
include/LLK/Transforms/: ForallToLLRT.h  FuseDoubleContraction.h  LinearizeForall.h  PackWeights.h  Passes.td  ScheduleSelection.h  ScratchAnalysis.h  SerialParallelDispatch.h  ShapeSpecialization.h  TileAndVectorize.h
include/LLK/Transforms/Common/: MaskGeneration.h  MathApproximation.h  ScheduleLoader.h  TilingUtils.h  VectorizationUtils.h
lib/Conversion/LLKToLinalg/: LLKToLinalg.cpp
lib/Dialect/LLK/: LLKDialect.cpp  LLKOps.cpp
lib/Transforms/: ForallToLLRT.cpp  FuseDoubleContraction.cpp  LinearizeForall.cpp  PackWeights.cpp  ScheduleSelection.cpp  ScratchAnalysis.cpp  SerialParallelDispatch.cpp  ShapeSpecialization.cpp  TileAndVectorize.cpp
lib/Transforms/Common/: MaskGeneration.cpp  MathApproximation.cpp  ScheduleLoader.cpp  TilingUtils.cpp  VectorizationUtils.cpp
runtime/: JitCache.cpp  PackedWeights.cpp  ThreadPool.cpp
schedules/: schedule_db.json
schedules/x86_avx2/: schedule_bf16.mlir
test/Conversion/: attention_lowering.mlir  llk_to_linalg.mlir  rope_lowering.mlir
test/Dialect/: ops.mlir  ops_invalid.mlir
test/Execution/: attention_correctness.cpp  attention_stability.cpp  cpu_features_test.cpp  edge_cases.cpp  jit_cache_hit.cpp  rope_correctness.cpp  shared_pipeline.cpp  swiglu_fused_memory.cpp  swiglu_parallel_scaling.cpp  swiglu_reference.cpp  swiglu_scalar.cpp  swiglu_small_shape.cpp  swiglu_vector_avx2.cpp  thread_pool_stress.cpp
test/Numerical/: rope_precision.cpp  vector_vs_scalar.cpp
test/Transforms/: causal_mask.mlir  forall_to_llrt.mlir  fuse_double_contraction.mlir  fuse_independent.mlir  fuse_reject.mlir  linearize_forall.mlir  mask_gen.mlir  online_softmax.mlir  pack_weights.mlir  rope_vector_shuffle.mlir  schedule_bf16_check.mlir  schedule_fallback.mlir  schedule_selection.mlir  scratch_analysis.mlir  serial_dispatch.mlir  shape_specialization.mlir  tile_and_vectorize.mlir
tools/llk-bench/: llk-bench.cpp
tools/llk-compile/: llk-compile.cpp
tools/llk-opt/: llk-opt.cpp
tools/llk-tune/: llk-tune.cpp
